--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines":{
-    "node":"12.16.3"
+  "engines": {
+    "node": "12.16.3"
   },
   "name": "phonestatus1",
   "version": "1.0.0",
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "start" : "node server"
+    "start": "node server"
   },
   "author": "Trond Strøm Lie",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
