--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
     "pug": "^3.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   }
 }
