--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pug": "^3.0.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "sleep-promise": "^8.0.1"
   }
 }
