--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
+    "node-cron": "^2.0.3",
     "pug": "^3.0.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
